--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.naven.plugins</groupId>
+				<artifactId>maven-resources-plugins</artifactId>
+				<version>3.2.5</version>
+			</plugin>
 		</plugins>
 		<finalName>${project.artifactId}</finalName>
 	</build>
