--- a/pom.xml
+++ b/pom.xml
@@ -86,8 +86,8 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.naven.plugins</groupId>
-				<artifactId>maven-resources-plugins</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.2.5</version>
 			</plugin>
 		</plugins>
