--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
 		<dependency>
 			<groupId>org.codehaus.mojo</groupId>
 			<artifactId>exec-maven-plugin</artifactId>
+			<version>3.9.10</version>
 		</dependency>
 	</dependencies>
 
