--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+   			<groupId>com.zaxxer</groupId>
+    			<artifactId>HikariCP</artifactId>
+    			<version>2.6.1</version>
+    			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
