--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
 # I just commented out this part as it was interfering with database testing JS 26/05/2025
 # H2 Database Configuration (fallback)
