--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=vfc-backend
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://aws-0-eu-west-1.pooler.supabase.com:6543/postgres
+spring.datasource.url=postgresql://postgres:CT5179Capstone!@db.qeztinzrtdvcbbvlywdt.supabase.co:5432/postgres
 spring.datasource.username=postgres.qeztinzrtdvcbbvlywdt
 spring.datasource.password=CT5179Capstone!
 spring.jpa.hibernate.ddl-auto=update
